# markdown-contract

./: .editorconfig  .gitignore  .prototools  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  biome.json  biome.jsonc  handoff.md  knip.json  lease.json  lefthook.yml  markdown-contract.yaml  moon.yml  package-lock.json  package.json  sdlc.yaml  tsconfig.json  vitest.config.ts
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  deploy-docs.yml  knip.yml  metrics.yml  package-quality.yml
.moon/: toolchains.yml  workspace.yml
apps/daemon-web-prototype/: .gitignore  CONVENTIONS.md  README.md  REVIEW.md  nuxt.config.ts  package.json
apps/daemon-web-prototype/mocks/: types.ts  (+3 more)
apps/desktop/: README.md  dist  moon.yml  nuxt.config.ts  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: config_edit.rs  daemon.rs  drift.rs  engine.rs  lib.rs  main.rs  notifications.rs  openers.rs  scans.rs  scheduler.rs  status.rs  tray.rs  watcher.rs
apps/desktop/src-tauri/src/api/transport/: mod.rs
apps/desktop/src-tauri/src/api/transport/http/: generated.rs  mod.rs
apps/desktop/src-tauri/src/api/transport/ipc/: generated.rs
apps/desktop/src-tauri/src/api/v1/: check.rs  config.rs  echo.rs  mod.rs  openers.rs  scan.rs  vault_status.rs
apps/desktop/src-tauri/src/engine/: cli.rs  fixture.rs  map.rs  mod.rs  native.rs  router.rs
apps/desktop/src-tauri/src/persistence/db/: mod.rs
apps/desktop/src-tauri/src/persistence/db/conversions/: mod.rs
apps/desktop/src-tauri/src/persistence/fs_markdown/: mod.rs
apps/desktop/src-tauri/src/persistence/fs_markdown/parser/: ontology.rs
apps/desktop/src-tauri/src/schema/: config_edit.rs  drift.rs  finding_record.rs  mod.rs  opener_preference.rs  openers.rs  scan_run.rs  vault.rs  vault_status.rs
apps/desktop/src-tauri/src/schema/dto/: finding_record.rs  mod.rs  opener_preference.rs  scan_run.rs  vault.rs
apps/desktop/src-tauri/src/store/: mod.rs
apps/desktop/src-tauri/src/store/hooks/: finding_record.rs  mod.rs  opener_preference.rs  scan_run.rs  vault.rs
apps/docs/: README.md  astro.config.mjs  moon.yml
apps/web/: README.md  moon.yml  package.json  tsconfig.json
contracts/: README.md  capability.contract.yaml  decision.contract.yaml  driver.contract.yaml  milestone.contract.yaml  product.contract.yaml  task.contract.yaml
crates/markdown-contract-engine/: Cargo.toml
crates/markdown-contract-engine/src/: camel.rs  content.rs  contract.rs  finding.rs  frontmatter.rs  lib.rs  parse.rs  registry.rs  schema.rs  structure.rs  text_constraints.rs  text_match.rs  tree.rs  validate.rs
crates/markdown-contract-engine/src/declarative/: body.rs  body_v2.rs  config.rs  errors.rs  load.rs  mod.rs  parse.rs  schema.rs  schema_v2.rs  text.rs
crates/markdown-contract-engine/src/dialect/: anchors.rs  mod.rs  wikilinks.rs
crates/markdown-contract-engine/src/runner/: corpus.rs  mod.rs  native.rs
crates/markdown-contract-engine/tests/: corpus.rs
crates/markdown-contract-engine/wasm-spike/: .gitignore  Cargo.toml  FINDINGS.md  README.md  build.sh
crates/markdown-contract-engine/wasm-spike/harness/: index.html  run-node.cjs
crates/markdown-contract-engine/wasm-spike/src/: lib.rs
docs/: example-catalog.md  example-recipes.md  glossary.md  index.md  references.md
docs/catalog/: author.yaml  automate.yaml  cli.yaml  consume-as-data.yaml  declarative-yaml.yaml  dialect.yaml  embed-and-ci.yaml  inference-init.yaml  read.yaml  real-world-schemas.yaml  validate.yaml  validation-planes.yaml
docs/planning/: vision.md
examples/single-binary/: .gitignore  README.md  moon.yml  package.json
examples/single-binary-nitro/: .gitignore  README.md  moon.yml  package.json  tsconfig.json
prototype/web-ui/: .gitignore  .npmrc  README.md  REVIEW.md  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
provenance/d0014/: README.md  proposed-shape.md  review-checklist.md
provenance/d0015/: README.md  proposed-shape.md
provenance/d0016/: README.md
provenance/d0019/: README.md
provenance/d0020/: README.md
sites/: README.md
sites/docs/: README.md  astro.config.mjs  moon.yml  package.json
src/: index.test.ts  index.ts
src/cli/: format.test.ts  format.ts  index.ts  run.ts
src/core/: content.test.ts  content.ts  finding.ts  grammar.test.ts  grammar.ts  index.ts  leaves.test.ts  leaves.ts  model.test.ts  model.ts  projection.ts  registry.test.ts  registry.ts  structure.ts  text-constraints.test.ts  text-constraints.ts  text-match.ts  types.ts  validate.ts
src/declarative/: body.ts  config.test.ts  config.ts  constants.ts  errors.ts  index.ts  infer.test.ts  infer.ts  load.test.ts  load.ts  parse.ts  schema.test.ts  schema.ts  text.test.ts  text.ts
src/runner/: corpus.test.ts  corpus.ts  index.ts
tests/: FIXTURES.md  components.ts  consumption.test.ts  harness.ts  inference.cli.test.ts  inference.test.ts  smoke.test.ts  validation.test.ts  yaml-parity.test.ts
tests/fixtures/: YAML-MAPPING.md
(+770 files in other folders)
