# The matched Rust engine (D-0018 §D2) — fs-free, wasm32-compatible core.
# comrak is pinned exactly: markdown line accounting is part of the parity
# contract with the TS engine, and a parser bump can move sourcepos.
[package]
name = "markdown-contract-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
comrak = { version = "=0.53.0", default-features = false }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
